# CentauriCarbon2

./: .gitignore
elegoo/: CMakeLists.txt  build_arm_local.sh  dsp_helper.h  extruder.cpp  gcode.cpp  gcode.h  host_warpper.cpp  main.cpp  printer.cpp  serial.h  serial_bootloader.cpp  serialhdl.cpp  webhooks.cpp  webhooks.h
elegoo/chelper/: stepcompress.c
elegoo/common/: utilities.h
elegoo/extras/: CMakeLists.txt  adc_temperature.h  adxl345.h  auto_detect.cpp  bedmesh_x64_stubs.cpp  bulk_sensor.cpp  bus.cpp  buttons.cpp  filament_motion_sensor.cpp  gcode_move.cpp  liner_base.h  lis2dh.cpp  mcu_tmc_base.h  mmu.cpp  motion_report.cpp  output_pin.cpp
elegoo/extras/ai_camera/module/: control.h
elegoo/extras/ai_camera/module/base/: camera_base.h
elegoo/extras/ai_camera/module/camera/: uvc_camera.h  uvc_v4l2.h
elegoo/extras/ai_camera/module/comm/: server_socket.h
elegoo/extras/ai_camera/module/video_stream/: rtsp_streamer.h
elegoo/extras/bedmesh/: load_cell.h
elegoo/install/release/: debug_window  libfftw3.so.3
elegoo/kinematics/: kinematics.h
elegoo/moonraker_bridge/: CMakeLists.txt  bridge_server.cpp  bridge_server.h  cc2_client.cpp  cc2_client.h  main.cpp
scripts/arm/: toolchain-sunxi-glibc
